--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -6,6 +6,11 @@
         <title>
             {% block title %}{{ t('nav.siteTitle') }}{% endblock %}
         </title>
+        <!-- Favicons -->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg">
+        <link rel="mask-icon" href="/favicon.svg" color="#00b140">
         <!-- Base CSS -->
         <link
         rel="stylesheet" href="/css/style.css">
