--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -6,6 +6,9 @@
         <title>
             {% block title %}{{ t('nav.siteTitle') }}{% endblock %}
         </title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <!-- Base CSS -->
         <link
         rel="stylesheet" href="/css/style.css">
