--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -40,7 +40,8 @@
                         </ul>
                     </div>
                     <a href="/" class="btn btn-ghost text-xl">
-                        <img src="/images/kainos-logo.png" alt="Kainos Logo" class="h-8">
+                        <img src="/images/kainos-logo-light.png" alt="Kainos Logo" class="h-8 logo-light">
+                        <img src="/images/kainos-logo-dark.png" alt="Kainos Logo" class="h-8 logo-dark">
                         <span class="ml-2">{{ t('nav.siteTitle') }}</span>
                     </a>
                 </div>
